--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ jobs:
   include:
     - name: omnilint
       install: docker pull lpenz/omnilint
-      script: docker run --rm -v "$PWD:$PWD" -e "RWD=$PWD" -e "MY_UID=$UID" lpenz/omnilint
+      script: docker run --rm -u "$UID" -v "$PWD:$PWD" -w "$PWD" lpenz/omnilint
     - name: linkchecker
       addons: { apt: { packages: [ linkchecker ] } }
       script: linkchecker index.html
