--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,13 @@
 ---
 name: CI
-on:  # yamllint disable-line rule:truthy
-  - workflow_dispatch
-  - push
-  - pull_request
+on: [workflow_dispatch, push, pull_request]  # yamllint disable-line rule:truthy
 jobs:
   omnilint:
     uses: lpenz/omnilint/.github/workflows/omnilint.yml@v0.5.2
   linkcheck:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: lycheeverse/lychee-action@v1.0.8
+      - uses: actions/checkout@v5.0.0
+      - uses: lycheeverse/lychee-action@v2.6.1
         with:
           args: --verbose --no-progress **/*.md **/*.html
